# paper-master

./: .gitignore  .venv  CLAUDE.md  README.md  config.example.yaml  main.py  pyproject.toml  requirements.txt
.superpowers/sdd/: task-1-brief.md
docs/: architecture.md
docs/superpowers/plans/: 2026-07-10-paper-master.md  2026-07-13-mineru-integration.md  2026-07-16-paper-memory-plan.md  2026-07-16-rag-tooling.md
docs/superpowers/specs/: 2026-07-10-paper-master-design.md  2026-07-13-mineru-integration-design.md  2026-07-16-paper-memory-design.md  2026-07-16-rag-tooling-design.md
paper_reader/: __init__.py  agent.py  blocks.py  context.py  llm.py  memory.py  mineru_parser.py  parser.py
tests/: conftest.py  test_agent.py  test_blocks.py  test_cli.py  test_context.py  test_integration.py  test_llm.py  test_memory.py  test_mineru_parser.py  test_parser.py
