[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-master"
version = "0.1.0"
description = "Read and chat with academic PDF papers using LLMs"
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.24.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pyyaml>=6.0",
    "Pillow",
]

[project.scripts]
paper-master = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["paper_reader*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
